# security_robot

./: .gitignore
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml  events.out.tfevents.1732687108.5db5cc2e97fe.2463.0  results.csv
runs/detect/train5/: args.yaml  events.out.tfevents.1732687183.5db5cc2e97fe.2463.1  results.csv
runs/detect/train6/: args.yaml  events.out.tfevents.1732687405.5db5cc2e97fe.2463.2
runs/detect/train7/: args.yaml  events.out.tfevents.1732687455.5db5cc2e97fe.4282.0  results.csv
src/: data.yaml  yolo_train.ipynb
src/interface/: CMakeLists.txt  package.xml
src/interface/msg/: DetectedObject.msg
src/learning/: data_yaml.ipynb  yolo_train.ipynb
src/prisoner/: package.xml  setup.cfg  setup.py
src/prisoner/prisoner/: AMR.py  commend_center.py  make_db.py  security_cam.py  web.py
src/prisoner/prisoner/templates/: db.html  login.html  monitoring.html
yolo_weight/: labelImg_setting.ipynb
